# swagger_server/controllers/default_controller.py
@@ -1,11 +1,8 @@
 import connexion
 import six
+
 from swagger_server import util
 from qubitcrunch import core
-import pandas as pd
-import scipy as sp
-from qubitcrunch.labeling_functions import lf_contains_sports_term,lf_contains_finance_term
-
 
 def batch_unlabeled_return():  # noqa: E501
     """Return a batch of unlabeled data.
@@ -15,7 +12,7 @@ def batch_unlabeled_return():  # noqa: E501
 
     :rtype: None
     """
-    return core.batch_unlabeled_return()
+    return  core.batch_unlabeled_return()
 
 
 def labeling_function_new():  # noqa: E501
@@ -40,12 +37,14 @@ def labeling_functions_return():  # noqa: E501
     return core.labeling_functions_return()
 
 
-def weakly_label():  # noqa: E501
+def weakly_label(weak):  # noqa: E501
     """Run algorithm to weakly label data points.
 
     POST an instruction for weakly labeling data points # noqa: E501
 
+    :param weak: name of weak labeling algorithm to be used
+    :type weak: str
 
     :rtype: None
     """
-    return core.weakly_label()
+    return 'do some magic!'
